--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,57 @@
 {
-    "id": "TotemInteractivo",
     "name": "Tótem Interactivo",
     "short_name": "Tótem",
-    "description": "Aplicación interactiva con información y grabación de audio",
-    "start_url": "/index.html",
+    "description": "Aplicación interactiva con formulario de texto y visualización de PDFs",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#000000",
-    "orientation": "portrait",
+    "orientation": "any",
+    "categories": ["business", "productivity"],
     "icons": [
         {
             "src": "src/img/192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         },
         {
             "src": "src/img/512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "src/img/192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "src/img/512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
-    ]
+    ],
+    "screenshots": [
+        {
+            "src": "src/img/Recurso 10.png",
+            "sizes": "1920x1080",
+            "type": "image/png",
+            "form_factor": "wide",
+            "label": "Pantalla principal del Tótem"
+        }
+    ],
+    "shortcuts": [
+        {
+            "name": "Abrir Formulario",
+            "url": "/?form=true",
+            "description": "Abre directamente el formulario de respuestas"
+        }
+    ],
+    "lang": "es",
+    "dir": "ltr",
+    "prefer_related_applications": false,
+    "display_override": ["standalone", "fullscreen"]
 } 
