--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "name": "Tótem Interactivo",
     "short_name": "Tótem",
     "description": "Aplicación interactiva con formulario de texto y visualización de PDFs",
-    "start_url": "/",
+    "start_url": "./index.html",
+    "scope": ".",
     "display": "fullscreen",
     "background_color": "#000000",
     "theme_color": "#000000",
@@ -11,25 +12,25 @@
     "display_override": ["fullscreen"],
     "icons": [
         {
-            "src": "src/img/192.png",
+            "src": "./src/img/192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "src/img/512.png",
+            "src": "./src/img/512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "src/img/192.png",
+            "src": "./src/img/192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "src/img/512.png",
+            "src": "./src/img/512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
@@ -37,7 +38,7 @@
     ],
     "screenshots": [
         {
-            "src": "src/img/Recurso 10.png",
+            "src": "./src/img/Recurso 10.png",
             "sizes": "1920x1080",
             "type": "image/png",
             "form_factor": "wide",
@@ -47,7 +48,7 @@
     "shortcuts": [
         {
             "name": "Abrir Formulario",
-            "url": "/?form=true",
+            "url": "./index.html?form=true",
             "description": "Abre directamente el formulario de respuestas"
         }
     ],
