--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "Tótem Interactivo",
     "short_name": "Tótem",
     "description": "Aplicación interactiva con formulario de texto y visualización de PDFs",
-    "start_url": "@https://jeanb1992.github.io/Totem2/",
-    "scope": "@https://jeanb1992.github.io/Totem2/",
+    "start_url": "https://jeanb1992.github.io/Totem2/",
+    "scope": "https://jeanb1992.github.io/Totem2/",
     "display": "fullscreen",
     "background_color": "#000000",
     "theme_color": "#000000",
@@ -12,25 +12,25 @@
     "display_override": ["fullscreen"],
     "icons": [
         {
-            "src": "@https://jeanb1992.github.io/Totem2/src/img/192.png",
+            "src": "https://jeanb1992.github.io/Totem2/src/img/192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "@https://jeanb1992.github.io/Totem2/src/img/512.png",
+            "src": "https://jeanb1992.github.io/Totem2/src/img/512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "@https://jeanb1992.github.io/Totem2/src/img/192.png",
+            "src": "https://jeanb1992.github.io/Totem2/src/img/192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "@https://jeanb1992.github.io/Totem2/src/img/512.png",
+            "src": "https://jeanb1992.github.io/Totem2/src/img/512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
@@ -38,7 +38,7 @@
     ],
     "screenshots": [
         {
-            "src": "@https://jeanb1992.github.io/Totem2/src/img/Recurso 10.png",
+            "src": "https://jeanb1992.github.io/Totem2/src/img/Recurso 10.png",
             "sizes": "1920x1080",
             "type": "image/png",
             "form_factor": "wide",
@@ -48,7 +48,7 @@
     "shortcuts": [
         {
             "name": "Abrir Formulario",
-            "url": "@https://jeanb1992.github.io/Totem2/?form=true",
+            "url": "https://jeanb1992.github.io/Totem2/?form=true",
             "description": "Abre directamente el formulario de respuestas"
         }
     ],
