--- a/manifest.json
+++ b/manifest.json
@@ -10,35 +10,28 @@
     "orientation": "portrait",
     "categories": ["business", "productivity"],
     "display_override": ["fullscreen"],
+    "prefer_related_applications": false,
+    "launch_handler": {
+        "client_mode": ["focus-existing", "auto"]
+    },
+    "id": "/",
     "icons": [
         {
-            "src": "https://jeanb1992.github.io/Totem2/src/img/192.png",
+            "src": "src/img/192.png",
             "sizes": "192x192",
             "type": "image/png",
-            "purpose": "any"
+            "purpose": "any maskable"
         },
         {
-            "src": "https://jeanb1992.github.io/Totem2/src/img/512.png",
+            "src": "src/img/512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "https://jeanb1992.github.io/Totem2/src/img/192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "https://jeanb1992.github.io/Totem2/src/img/512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
+            "purpose": "any maskable"
         }
     ],
     "screenshots": [
         {
-            "src": "https://jeanb1992.github.io/Totem2/src/img/Recurso 10.png",
+            "src": "src/img/Recurso 10.png",
             "sizes": "1920x1080",
             "type": "image/png",
             "form_factor": "wide",
@@ -54,7 +47,6 @@
     ],
     "lang": "es",
     "dir": "ltr",
-    "prefer_related_applications": false,
     "related_applications": [
         {
             "platform": "play",
