--- a/manifest.json
+++ b/manifest.json
@@ -8,54 +8,63 @@
     "background_color": "#000000",
     "theme_color": "#000000",
     "orientation": "portrait",
-    "categories": ["business", "productivity"],
-    "display_override": ["fullscreen"],
+    "categories": [
+      "business",
+      "productivity"
+    ],
+    "display_override": [
+      "fullscreen",
+      "window-controls-overlay"
+    ],
     "prefer_related_applications": false,
     "launch_handler": {
-        "client_mode": ["focus-existing", "auto"]
+      "client_mode": [
+        "focus-existing",
+        "auto"
+      ]
     },
-    "id": "/",
+    "id": "/totem",
     "icons": [
-        {
-            "src": "src/img/192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "src/img/512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any maskable"
-        }
+      {
+        "src": "src/img/192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any maskable"
+      },
+      {
+        "src": "src/img/512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "any maskable"
+      }
     ],
     "screenshots": [
-        {
-            "src": "src/img/Recurso 10.png",
-            "sizes": "1920x1080",
-            "type": "image/png",
-            "form_factor": "wide",
-            "label": "Pantalla principal del Tótem"
-        }
+      {
+        "src": "src/img/Recurso 10.png",
+        "sizes": "1920x1080",
+        "type": "image/png",
+        "form_factor": "wide",
+        "label": "Pantalla principal del Tótem"
+      }
     ],
     "shortcuts": [
-        {
-            "name": "Abrir Formulario",
-            "url": "https://jeanb1992.github.io/Totem2/?form=true",
-            "description": "Abre directamente el formulario de respuestas"
-        }
+      {
+        "name": "Abrir Formulario",
+        "url": "https://jeanb1992.github.io/Totem2/?form=true",
+        "description": "Abre directamente el formulario de respuestas"
+      }
     ],
     "lang": "es",
     "dir": "ltr",
     "related_applications": [
-        {
-            "platform": "play",
-            "url": "https://play.google.com/store/apps/details?id=com.totem.app",
-            "id": "com.totem.app"
-        }
+      {
+        "platform": "play",
+        "url": "https://play.google.com/store/apps/details?id=com.totem.app",
+        "id": "com.totem.app"
+      }
     ],
     "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
     "edge_side_panel": {
-        "preferred_width": 480
+      "preferred_width": 480
     }
-} 
+  }
