--- a/manifest.json
+++ b/manifest.json
@@ -26,16 +26,28 @@
     "id": "/totem",
     "icons": [
       {
-        "src": "src/img/192.png",
+        "src": "assets/icons/android-launchericon-192-192.png",
         "sizes": "192x192",
         "type": "image/png",
-        "purpose": "any maskable"
+        "purpose": "maskable"
       },
       {
-        "src": "src/img/512.png",
+        "src": "assets/icons/android-launchericon-512-512.png",
         "sizes": "512x512",
         "type": "image/png",
-        "purpose": "any maskable"
+        "purpose": "maskable"
+      },
+      {
+        "src": "assets/icons/android-launchericon-192-192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any"
+      },
+      {
+        "src": "assets/icons/android-launchericon-512-512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "any"
       }
     ],
     "screenshots": [
